--- a/countDownLatch/pom.xml
+++ b/countDownLatch/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>interview</groupId>
-    <artifactId>collections</artifactId>
+    <artifactId>countdownlatch</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
